--- a/apps/legacy/package.json
+++ b/apps/legacy/package.json
@@ -1,29 +1,23 @@
 {
-  "name": "app1",
+  "name": "legacy",
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --port 3000",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "vite:build": "vite build",
-    "server": "http-server ./dist -p 3001 --cors -c-1"
+    "lint": "next lint"
   },
   "dependencies": {
-    "@cvccorp-components/chui-vite": "^2.1.1",
     "@material-ui/core": "^4.4.1",
     "@material-ui/styles": "^4.4.1",
     "@module-federation/nextjs-mf": "^7.0.8",
-    "@vitejs/plugin-react": "^4.1.0",
     "next": "^12.0.0",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "vite": "^4.5.0"
+    "react-dom": "^17.0.2"
   },
   "devDependencies": {
     "eslint": "8.52.0",
-    "eslint-config-next": "13.5.6",
-    "http-server": "^14.1.1"
+    "eslint-config-next": "13.5.6"
   }
 }
