--- a/apps/shell/package.json
+++ b/apps/shell/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "app2",
+  "name": "shell",
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev  --port 3003",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -12,14 +12,14 @@
     "@module-federation/nextjs-mf": "^7.0.8",
     "next": "13.5.6",
     "react": "^18",
-    "react-dom": "^18",
-    "systemjs": "^6.14.2"
+    "react-dom": "^18"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/systemjs": "^6.13.4",
+    "concurrently": "^8.2.2",
     "typescript": "^5"
   }
 }
